# priidik-bot

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml  deploy.yml  docker.yml  rust.yml
src/: main.rs  queue.rs  utils.rs
src/commands/: join.rs  leave.rs  mod.rs  pena.rs  secret.rs  test.rs  vanaisa.rs
