[package]
name = "priidik-bot"
version = "0.5.1"
authors = ["mxr <eetu.kivelae@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.8", default-features = false, features = ["client", "cache", "gateway", "rustls_backend", "model", "voice"] }
dotenv = "0.15.0"
songbird = "0.1.7"
rand = "0.8.4"
regex = "1.5.4"
tokio = { version = "1.7.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.14"
env_logger = "0.8.4"